--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
-    "prettier": "2.7.1"
+    "prettier": "2.7.1",
+    "typescript": "^4.8.4"
   }
 }
