--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-smooth-corners": "^1.0.4",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
