--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-smooth-corners": "^1.0.4",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
+    "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
